--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.620.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^11.3.19",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
