--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.620.0",
+    "@nextui-org/react": "^2.4.7",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.4",
     "framer-motion": "^11.3.19",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.14.1",
+    "react-table": "^7.8.0",
     "sharp": "^0.33.4",
     "uuid": "^10.0.0"
   },
