--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.620.0",
     "@nextui-org/react": "^2.4.7",
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
-
     "framer-motion": "^11.3.19",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
