--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@aws-sdk/client-s3": "^3.620.0",
     "@nextui-org/react": "^2.4.7",
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
-
-    "framer-motion": "^11.3.19",
+    "framer-motion": "^11.5.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-sortablejs": "^6.1.4",
     "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
     "sharp": "^0.33.4",
+    "use-places-autocomplete": "^4.0.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
